# Stm32Lessons

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMSIS/inc/: stm32f1xx.h
Code/: main.c  main.h
